fixed some spacings

--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,17 @@ p.graspDesc {
   padding-left: 100px;
   font-size: 14px;
 }
+
+p.graspBold{
+  color: #152349;
+  display: flex;
+  font-family: "Lato", sans-serif;
+  padding-left: 100px;
+  font-size: 14px;
+  font-weight:bold;
+  padding-top: 25px;
+  padding-bottom: 14px;
+}
 /* .App {
   text-align: center;
 } */
